# my_gas

./: CMakeLists.txt  README.md  as.c
c-test/: main  main.c  main.s
c-test/final-asm/: 00_main copy.s  01_var_defn.s  02_var_defn2.s  03_arr_defn.s  03_var_defn2.s  04_const_defn.s  04_func_defn.s  05_add.s  05_const_array_defn.s  06_mod.s  06_var_defn_func.s  07_return_var.s  08_arr_assign.s  08_comment2.s  09_void_func.s  10_break.s  10_if_else.s  11_continue.s  11_while.s  12_array_traverse.s  12_getint.s  13_and.s  13_array_traverse2.s  14_or.s  15_array_test3.s  15_equal.s  16_greater_eq.s  16_nequal.s  17_less.s  17_less_eq.s  18_cal_prio.s  19_neg_expr.s  20_arr_sum.s  21_suminput.s  22_if_test1.s  23_if_test2.s  24_if_test3.s  25_if_test4.s  26_if_test5.s  27_while_test1.s  (+12 more)
c-test/test_cases/: 01_var_defn.c  04_const_defn.c  04_func_defn.c  08_arr_assign.c  10_break.c  10_if_else.c  11_continue.c  11_while.c  12_array_traverse.c  13_array_traverse2.c  14_or.c  30_while_if_test1.c  31_while_if_test2.c  35_array_test.c  41_index_arithmetic_expr.c  67_remove_duplicate_element.c  68_accumulate.c  71_max_subsequence_sum.c  72_enum.c  93_matrix_sub.c
config/: obj-elf.c  obj-elf.h  tc-arm.c  tc-arm.h  te-linux.h
include/: app.h  as.h  config.h  frags.h  listing.h  output-file.h  symbols.h  write.h
src/: app.c  cond.c  depend.c  ehopt.c  expr.c  frags.c  hash.c  input-file.c  input-scrub.c  listing.c  macro.c  messages.c  output-file.c  read.c  sb.c  subsegs.c  symbols.c  write.c
